WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205648
REGRESSION(
r253939
): [GTK] Broke build with !USE(WPE_RENDERER)
https://bugs.webkit.org/show_bug.cgi?id=205648
Summary
REGRESSION(r253939): [GTK] Broke build with !USE(WPE_RENDERER)
Carlos Alberto Lopez Perez
Reported
2019-12-30 11:45:10 PST
r253939
broke the build in the Debian stable bot:
https://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release%20Debian%20Stable%20%28Build%29/builds/28184
This bot checks that WebKit its buildable with the libraries shipped by the distribution. libwpe is still not shipped by Debian stable, so it builds with --cmakeargs=-DUSE_WPE_RENDERER=OFF The build error from gcc is a bit cryptic, so I tried to build it locally with clang instead of gcc and I can see this: In file included from ../../Source/WebKit/UIProcess/gtk/WaylandCompositor.cpp:46: In file included from DerivedSources/ForwardingHeaders/WebCore/Extensions3DOpenGL.h:28: In file included from DerivedSources/ForwardingHeaders/WebCore/Extensions3DOpenGLCommon.h:31: In file included from DerivedSources/ForwardingHeaders/WebCore/GraphicsContext3D.h:31: DerivedSources/ForwardingHeaders/WebCore/GraphicsContext3DBase.h:734:9: error: expected identifier None, ^ /usr/include/X11/X.h:115:30: note: expanded from macro 'None' #define None 0L /* universal null resource or null atom */ It seems there is a conflict because of using the word "None", which a X11 header defines to 0L. This X11 header is included when !USE(WPE_RENDERER) from In file included from Source/WebKit/UIProcess/gtk/WaylandCompositor.cpp:32: In file included from /usr/include/EGL/egl.h:39: In file included from /usr/include/EGL/eglplatform.h:124: In file included from /usr/include/X11/Xlib.h:44:
Attachments
Patch
(1.12 KB, patch)
2020-01-06 05:59 PST
,
Diego Pino
no flags
Details
Formatted Diff
Diff
Patch
(1.24 KB, patch)
2020-01-07 22:05 PST
,
Diego Pino
dpino
: commit-queue+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2020-01-06 05:59:31 PST
Created
attachment 386838
[details]
Patch
WebKit Commit Bot
Comment 2
2020-01-07 11:50:46 PST
Comment on
attachment 386838
[details]
Patch Rejecting
attachment 386838
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 386838, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=386838&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=205648
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Processing patch 386838 from
bug 205648
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=386838
Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Carlos Alberto Lopez Perez']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. can't find file to patch at input line 5 Perhaps you used the wrong -p or --strip option? The text leading up to this was: -------------------------- |Index: Source/WebCore/platform/graphics/GraphicsContext3DBase.h |index 2e03805c218c7987049cdd80a6f070cca1813978..67bd154df1ec6a00807efbb2614d024f08f3be50 100644 |--- Source/WebCore/platform/graphics/GraphicsContext3DBase.h (revision 0) |+++ Source/WebCore/platform/graphics/GraphicsContext3DBase.h (working copy) -------------------------- No file to patch. Skipping patch. 1 out of 1 hunk ignored Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Carlos Alberto Lopez Perez']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
https://webkit-queues.webkit.org/results/13300762
Diego Pino
Comment 3
2020-01-07 22:05:48 PST
Created
attachment 387074
[details]
Patch
WebKit Commit Bot
Comment 4
2020-01-08 06:10:14 PST
Comment on
attachment 387074
[details]
Patch Clearing flags on attachment: 387074 Committed
r254198
: <
https://trac.webkit.org/changeset/254198
>
WebKit Commit Bot
Comment 5
2020-01-08 06:10:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug