REGRESSION(r253939): [GTK] Broke build with !USE(WPE_RENDERER) https://bugs.webkit.org/show_bug.cgi?id=205648

Reviewed by Carlos Alberto Lopez Perez.

* platform/graphics/GraphicsContextGL.h: Rename enum None to
DOMSourceNone to avoid name collission.


Canonical link: https://commits.webkit.org/219057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254198 268f45cc-cd09-0410-ab3c-d52691b4dbfc